--- a/templates/problem/numericalresponse_hint.yaml
+++ b/templates/problem/numericalresponse_hint.yaml
@@ -1,54 +1,54 @@
 ---
 metadata:
-    display_name: Ввод числа с подсказками
+    display_name: Р’РІРѕРґ С‡РёСЃР»Р° СЃ РїРѕРґСЃРєР°Р·РєР°РјРё
     markdown: |
         
-        Можно отображать обратную связь на ответы. (Вы не можете дать обратную связь на неверный ответ.)
+        РњРѕР¶РЅРѕ РѕС‚РѕР±СЂР°Р¶Р°С‚СЊ РѕР±СЂР°С‚РЅСѓСЋ СЃРІСЏР·СЊ РЅР° РѕС‚РІРµС‚С‹. (Р’С‹ РЅРµ РјРѕР¶РµС‚Рµ РґР°С‚СЊ РѕР±СЂР°С‚РЅСѓСЋ СЃРІСЏР·СЊ РЅР° РЅРµРІРµСЂРЅС‹Р№ РѕС‚РІРµС‚.)
 
-        Используйте текст подсказок, чтобы помочь учащемуся провести вычисления.
+        РСЃРїРѕР»СЊР·СѓР№С‚Рµ С‚РµРєСЃС‚ РїРѕРґСЃРєР°Р·РѕРє, С‡С‚РѕР±С‹ РїРѕРјРѕС‡СЊ СѓС‡Р°С‰РµРјСѓСЃСЏ РїСЂРѕРІРµСЃС‚Рё РІС‹С‡РёСЃР»РµРЅРёСЏ.
 
-        Вы также можете добавлять подсказки.
+        Р’С‹ С‚Р°РєР¶Рµ РјРѕР¶РµС‚Рµ РґРѕР±Р°РІР»СЏС‚СЊ РїРѕРґСЃРєР°Р·РєРё.
 
-        Обязательно выберите Настройки для отображения правильного названия вопроса и других значений.
+        РћР±СЏР·Р°С‚РµР»СЊРЅРѕ РІС‹Р±РµСЂРёС‚Рµ РќР°СЃС‚СЂРѕР№РєРё РґР»СЏ РѕС‚РѕР±СЂР°Р¶РµРЅРёСЏ РїСЂР°РІРёР»СЊРЅРѕРіРѕ РЅР°Р·РІР°РЅРёСЏ РІРѕРїСЂРѕСЃР° Рё РґСЂСѓРіРёС… Р·РЅР°С‡РµРЅРёР№.
 
-        Используйте приведенный ниже пример как образец.
+        РСЃРїРѕР»СЊР·СѓР№С‚Рµ РїСЂРёРІРµРґРµРЅРЅС‹Р№ РЅРёР¶Рµ РїСЂРёРјРµСЂ РєР°Рє РѕР±СЂР°Р·РµС†.
 
-        >>WВычислите среднее арифметическое для приведенного ряда чисел. (1, 5, 6, 3, 5))<<
+        >>WР’С‹С‡РёСЃР»РёС‚Рµ СЃСЂРµРґРЅРµРµ Р°СЂРёС„РјРµС‚РёС‡РµСЃРєРѕРµ РґР»СЏ РїСЂРёРІРµРґРµРЅРЅРѕРіРѕ СЂСЏРґР° С‡РёСЃРµР». (1, 5, 6, 3, 5))<<
 
-        = 4 {{Среднее арияметическое составляет 20 / 5, то есть 4.}}
+        = 4 {{РЎСЂРµРґРЅРµРµ Р°СЂРёСЏРјРµС‚РёС‡РµСЃРєРѕРµ СЃРѕСЃС‚Р°РІР»СЏРµС‚ 20 / 5, С‚Рѕ РµСЃС‚СЊ 4.}}
 
-        ||Среднее арифметическое представляет собой сумму всех значений, делённую на их количество n.||
-        ||n - количество наблюдений в представленном ряду значений.||
+        ||РЎСЂРµРґРЅРµРµ Р°СЂРёС„РјРµС‚РёС‡РµСЃРєРѕРµ РїСЂРµРґСЃС‚Р°РІР»СЏРµС‚ СЃРѕР±РѕР№ СЃСѓРјРјСѓ РІСЃРµС… Р·РЅР°С‡РµРЅРёР№, РґРµР»С‘РЅРЅСѓСЋ РЅР° РёС… РєРѕР»РёС‡РµСЃС‚РІРѕ n.||
+        ||n - РєРѕР»РёС‡РµСЃС‚РІРѕ РЅР°Р±Р»СЋРґРµРЅРёР№ РІ РїСЂРµРґСЃС‚Р°РІР»РµРЅРЅРѕРј СЂСЏРґСѓ Р·РЅР°С‡РµРЅРёР№.||
 
         [explanation]
-        Среднее арифметическое составляет собой сумму всех значений, делённую на их количество n. В данном примере: (1 + 5 + 6 + 3 + 5) / 5 = 20 / 5 = 4.
+        РЎСЂРµРґРЅРµРµ Р°СЂРёС„РјРµС‚РёС‡РµСЃРєРѕРµ СЃРѕСЃС‚Р°РІР»СЏРµС‚ СЃРѕР±РѕР№ СЃСѓРјРјСѓ РІСЃРµС… Р·РЅР°С‡РµРЅРёР№, РґРµР»С‘РЅРЅСѓСЋ РЅР° РёС… РєРѕР»РёС‡РµСЃС‚РІРѕ n. Р’ РґР°РЅРЅРѕРј РїСЂРёРјРµСЂРµ: (1 + 5 + 6 + 3 + 5) / 5 = 20 / 5 = 4.
         [explanation]
 
 hinted: true
 data: |
     <problem>
     
-    <p>Среднее арифметическое составляет представляет собой сумму всех значений, делённую на их количество.</p>
+    <p>РЎСЂРµРґРЅРµРµ Р°СЂРёС„РјРµС‚РёС‡РµСЃРєРѕРµ СЃРѕСЃС‚Р°РІР»СЏРµС‚ РїСЂРµРґСЃС‚Р°РІР»СЏРµС‚ СЃРѕР±РѕР№ СЃСѓРјРјСѓ РІСЃРµС… Р·РЅР°С‡РµРЅРёР№, РґРµР»С‘РЅРЅСѓСЋ РЅР° РёС… РєРѕР»РёС‡РµСЃС‚РІРѕ.</p>
 
-    <p>Используйте приведенный ниже пример как образец.</p>
+    <p>РСЃРїРѕР»СЊР·СѓР№С‚Рµ РїСЂРёРІРµРґРµРЅРЅС‹Р№ РЅРёР¶Рµ РїСЂРёРјРµСЂ РєР°Рє РѕР±СЂР°Р·РµС†.</p>
 
     <p>Use the following example problem as a model.</p>
 
-    <p>Вычислите среднее арифметическое для приведенного ряда чисел? (1, 5, 6, 3, 5)</p>
+    <p>Р’С‹С‡РёСЃР»РёС‚Рµ СЃСЂРµРґРЅРµРµ Р°СЂРёС„РјРµС‚РёС‡РµСЃРєРѕРµ РґР»СЏ РїСЂРёРІРµРґРµРЅРЅРѕРіРѕ СЂСЏРґР° С‡РёСЃРµР»? (1, 5, 6, 3, 5)</p>
     <numericalresponse answer="4">
-      <formulaequationinput label="Вычислите среднее арифметическое для приведенного ряда чисел? (1, 5, 6, 3, 5)" />
-      <correcthint>Среднее арифметическое составляет 20 / 5, то есть 4.</correcthint>
+      <formulaequationinput label="Р’С‹С‡РёСЃР»РёС‚Рµ СЃСЂРµРґРЅРµРµ Р°СЂРёС„РјРµС‚РёС‡РµСЃРєРѕРµ РґР»СЏ РїСЂРёРІРµРґРµРЅРЅРѕРіРѕ СЂСЏРґР° С‡РёСЃРµР»? (1, 5, 6, 3, 5)" />
+      <correcthint>РЎСЂРµРґРЅРµРµ Р°СЂРёС„РјРµС‚РёС‡РµСЃРєРѕРµ СЃРѕСЃС‚Р°РІР»СЏРµС‚ 20 / 5, С‚Рѕ РµСЃС‚СЊ 4.</correcthint>
     </numericalresponse>
 
     <solution>
       <div class="detailed-solution">
-        <p>Объяснение</p>
-        <p>Среднее арифметическое представляет собой сумму всех значений, делённую на их количество n. В данном случае: (1 + 5 + 6 + 3 + 5) / 5 = 20 / 5 = 4.</p>
+        <p>РћР±СЉСЏСЃРЅРµРЅРёРµ</p>
+        <p>РЎСЂРµРґРЅРµРµ Р°СЂРёС„РјРµС‚РёС‡РµСЃРєРѕРµ РїСЂРµРґСЃС‚Р°РІР»СЏРµС‚ СЃРѕР±РѕР№ СЃСѓРјРјСѓ РІСЃРµС… Р·РЅР°С‡РµРЅРёР№, РґРµР»С‘РЅРЅСѓСЋ РЅР° РёС… РєРѕР»РёС‡РµСЃС‚РІРѕ n. Р’ РґР°РЅРЅРѕРј СЃР»СѓС‡Р°Рµ: (1 + 5 + 6 + 3 + 5) / 5 = 20 / 5 = 4.</p>
       </div>
     </solution>
 
     <demandhint>
-      <hint>Среднее арифметическое представляет собой сумму всех значений, делённую на их количество n.</hint>
-      <hint>n - количество наблюдений.</hint>
+      <hint>РЎСЂРµРґРЅРµРµ Р°СЂРёС„РјРµС‚РёС‡РµСЃРєРѕРµ РїСЂРµРґСЃС‚Р°РІР»СЏРµС‚ СЃРѕР±РѕР№ СЃСѓРјРјСѓ РІСЃРµС… Р·РЅР°С‡РµРЅРёР№, РґРµР»С‘РЅРЅСѓСЋ РЅР° РёС… РєРѕР»РёС‡РµСЃС‚РІРѕ n.</hint>
+      <hint>n - РєРѕР»РёС‡РµСЃС‚РІРѕ РЅР°Р±Р»СЋРґРµРЅРёР№.</hint>
     </demandhint>
     </problem>
