--- a/templates/problem/string_response_hint.yaml
+++ b/templates/problem/string_response_hint.yaml
@@ -1,54 +1,54 @@
 ---
 metadata:
-    display_name: Ввод ответа текстом (с подсказками)
+    display_name: Р’РІРѕРґ РѕС‚РІРµС‚Р° С‚РµРєСЃС‚РѕРј (СЃ РїРѕРґСЃРєР°Р·РєР°РјРё)
     markdown: | 
 
-        Комментарии. Вы можете показывать учащемуся отдельный комментарий при верном ответе или неверном ответе (на каждый вариант ответа - свой комментарий).
+        РљРѕРјРјРµРЅС‚Р°СЂРёРё. Р’С‹ РјРѕР¶РµС‚Рµ РїРѕРєР°Р·С‹РІР°С‚СЊ СѓС‡Р°С‰РµРјСѓСЃСЏ РѕС‚РґРµР»СЊРЅС‹Р№ РєРѕРјРјРµРЅС‚Р°СЂРёР№ РїСЂРё РІРµСЂРЅРѕРј РѕС‚РІРµС‚Рµ РёР»Рё РЅРµРІРµСЂРЅРѕРј РѕС‚РІРµС‚Рµ (РЅР° РєР°Р¶РґС‹Р№ РІР°СЂРёР°РЅС‚ РѕС‚РІРµС‚Р° - СЃРІРѕР№ РєРѕРјРјРµРЅС‚Р°СЂРёР№).
 
-        В комментарии на неверные ответы можно указывать на типичные ошибки, чтобы помочь ему прийти к правильному заключению.
+        Р’ РєРѕРјРјРµРЅС‚Р°СЂРёРё РЅР° РЅРµРІРµСЂРЅС‹Рµ РѕС‚РІРµС‚С‹ РјРѕР¶РЅРѕ СѓРєР°Р·С‹РІР°С‚СЊ РЅР° С‚РёРїРёС‡РЅС‹Рµ РѕС€РёР±РєРё, С‡С‚РѕР±С‹ РїРѕРјРѕС‡СЊ РµРјСѓ РїСЂРёР№С‚Рё Рє РїСЂР°РІРёР»СЊРЅРѕРјСѓ Р·Р°РєР»СЋС‡РµРЅРёСЋ.
 
-        Обязательно выберите Настройки для отображения правильного названия вопроса и других значений.
+        РћР±СЏР·Р°С‚РµР»СЊРЅРѕ РІС‹Р±РµСЂРёС‚Рµ РќР°СЃС‚СЂРѕР№РєРё РґР»СЏ РѕС‚РѕР±СЂР°Р¶РµРЅРёСЏ РїСЂР°РІРёР»СЊРЅРѕРіРѕ РЅР°Р·РІР°РЅРёСЏ РІРѕРїСЂРѕСЃР° Рё РґСЂСѓРіРёС… Р·РЅР°С‡РµРЅРёР№.
 
-        Используйте приведенный ниже пример как образец.
+        РСЃРїРѕР»СЊР·СѓР№С‚Рµ РїСЂРёРІРµРґРµРЅРЅС‹Р№ РЅРёР¶Рµ РїСЂРёРјРµСЂ РєР°Рє РѕР±СЂР°Р·РµС†.
 
-        >>Какой штат США имеет самую большую площадь?<<
+        >>РљР°РєРѕР№ С€С‚Р°С‚ РЎРЁРђ РёРјРµРµС‚ СЃР°РјСѓСЋ Р±РѕР»СЊС€СѓСЋ РїР»РѕС‰Р°РґСЊ?<<
 
-        =Аляска {{Аляска занимает 576400 квадратных миль: ее площадь более чем в два раза превыает площадь второго по размера штата - Техаса.}}
+        =РђР»СЏСЃРєР° {{РђР»СЏСЃРєР° Р·Р°РЅРёРјР°РµС‚ 576400 РєРІР°РґСЂР°С‚РЅС‹С… РјРёР»СЊ: РµРµ РїР»РѕС‰Р°РґСЊ Р±РѕР»РµРµ С‡РµРј РІ РґРІР° СЂР°Р·Р° РїСЂРµРІС‹Р°РµС‚ РїР»РѕС‰Р°РґСЊ РІС‚РѕСЂРѕРіРѕ РїРѕ СЂР°Р·РјРµСЂР° С€С‚Р°С‚Р° - РўРµС…Р°СЃР°.}}
 
-        not=Техас {{Хотя многие полагают, что Техас - самый большой по размеру штат, на самом деле он занимает лишь второе место. Его площадь составляет 261797 квадратных миль.}}
+        not=РўРµС…Р°СЃ {{РҐРѕС‚СЏ РјРЅРѕРіРёРµ РїРѕР»Р°РіР°СЋС‚, С‡С‚Рѕ РўРµС…Р°СЃ - СЃР°РјС‹Р№ Р±РѕР»СЊС€РѕР№ РїРѕ СЂР°Р·РјРµСЂСѓ С€С‚Р°С‚, РЅР° СЃР°РјРѕРј РґРµР»Рµ РѕРЅ Р·Р°РЅРёРјР°РµС‚ Р»РёС€СЊ РІС‚РѕСЂРѕРµ РјРµСЃС‚Рѕ. Р•РіРѕ РїР»РѕС‰Р°РґСЊ СЃРѕСЃС‚Р°РІР»СЏРµС‚ 261797 РєРІР°РґСЂР°С‚РЅС‹С… РјРёР»СЊ.}}
 
-        not=Калифорния {{Калифорния - третий по размеру штат США. Ее площадь составляет 155959 квадратных мили.}}
+        not=РљР°Р»РёС„РѕСЂРЅРёСЏ {{РљР°Р»РёС„РѕСЂРЅРёСЏ - С‚СЂРµС‚РёР№ РїРѕ СЂР°Р·РјРµСЂСѓ С€С‚Р°С‚ РЎРЁРђ. Р•Рµ РїР»РѕС‰Р°РґСЊ СЃРѕСЃС‚Р°РІР»СЏРµС‚ 155959 РєРІР°РґСЂР°С‚РЅС‹С… РјРёР»Рё.}}
 
-        ||Думайте о площади, а не о населении.||
-        ||Думайте о всех 50 штатах, а не только о тех, которые расположены на основной континентальной территории США.||
+        ||Р”СѓРјР°Р№С‚Рµ Рѕ РїР»РѕС‰Р°РґРё, Р° РЅРµ Рѕ РЅР°СЃРµР»РµРЅРёРё.||
+        ||Р”СѓРјР°Р№С‚Рµ Рѕ РІСЃРµС… 50 С€С‚Р°С‚Р°С…, Р° РЅРµ С‚РѕР»СЊРєРѕ Рѕ С‚РµС…, РєРѕС‚РѕСЂС‹Рµ СЂР°СЃРїРѕР»РѕР¶РµРЅС‹ РЅР° РѕСЃРЅРѕРІРЅРѕР№ РєРѕРЅС‚РёРЅРµРЅС‚Р°Р»СЊРЅРѕР№ С‚РµСЂСЂРёС‚РѕСЂРёРё РЎРЁРђ.||
 
 
 
 hinted: true
  <problem>
 
-    <p>Здесь можно привести подсказку для конкретных верных или неверных ответов.</p>
+    <p>Р—РґРµСЃСЊ РјРѕР¶РЅРѕ РїСЂРёРІРµСЃС‚Рё РїРѕРґСЃРєР°Р·РєСѓ РґР»СЏ РєРѕРЅРєСЂРµС‚РЅС‹С… РІРµСЂРЅС‹С… РёР»Рё РЅРµРІРµСЂРЅС‹С… РѕС‚РІРµС‚РѕРІ.</p>
 
-    <p>Используйте подсказки для того, чтобы прокомментировать частые заблуждения и помочь учащемуся прийти к правильному ответу.</p>
+    <p>РСЃРїРѕР»СЊР·СѓР№С‚Рµ РїРѕРґСЃРєР°Р·РєРё РґР»СЏ С‚РѕРіРѕ, С‡С‚РѕР±С‹ РїСЂРѕРєРѕРјРјРµРЅС‚РёСЂРѕРІР°С‚СЊ С‡Р°СЃС‚С‹Рµ Р·Р°Р±Р»СѓР¶РґРµРЅРёСЏ Рё РїРѕРјРѕС‡СЊ СѓС‡Р°С‰РµРјСѓСЃСЏ РїСЂРёР№С‚Рё Рє РїСЂР°РІРёР»СЊРЅРѕРјСѓ РѕС‚РІРµС‚Сѓ.</p>
 
-    <p>Используйте приведенный ниже пример как модель.</p>
+    <p>РСЃРїРѕР»СЊР·СѓР№С‚Рµ РїСЂРёРІРµРґРµРЅРЅС‹Р№ РЅРёР¶Рµ РїСЂРёРјРµСЂ РєР°Рє РјРѕРґРµР»СЊ.</p>
 
-    <p>Какой штат США имеет самую большую площадь?</p>
+    <p>РљР°РєРѕР№ С€С‚Р°С‚ РЎРЁРђ РёРјРµРµС‚ СЃР°РјСѓСЋ Р±РѕР»СЊС€СѓСЋ РїР»РѕС‰Р°РґСЊ?</p>
 
-    <stringresponse answer="Аляска" type="ci" >
+    <stringresponse answer="РђР»СЏСЃРєР°" type="ci" >
 
-    <correcthint>Аляска занимает 576400 квадратных миль: ее площадь более чем в два раза превыает площадь второго по размера штата - Техаса.</correcthint>
+    <correcthint>РђР»СЏСЃРєР° Р·Р°РЅРёРјР°РµС‚ 576400 РєРІР°РґСЂР°С‚РЅС‹С… РјРёР»СЊ: РµРµ РїР»РѕС‰Р°РґСЊ Р±РѕР»РµРµ С‡РµРј РІ РґРІР° СЂР°Р·Р° РїСЂРµРІС‹Р°РµС‚ РїР»РѕС‰Р°РґСЊ РІС‚РѕСЂРѕРіРѕ РїРѕ СЂР°Р·РјРµСЂР° С€С‚Р°С‚Р° - РўРµС…Р°СЃР°.</correcthint>
 
-    <stringequalhint answer="Техас">Хотя многие полагают, что Техас - самый большой по размеру штат, на самом деле он занимает лишь второе место. Его площадь составляет 261797 квадратных миль.</stringequalhint>
+    <stringequalhint answer="РўРµС…Р°СЃ">РҐРѕС‚СЏ РјРЅРѕРіРёРµ РїРѕР»Р°РіР°СЋС‚, С‡С‚Рѕ РўРµС…Р°СЃ - СЃР°РјС‹Р№ Р±РѕР»СЊС€РѕР№ РїРѕ СЂР°Р·РјРµСЂСѓ С€С‚Р°С‚, РЅР° СЃР°РјРѕРј РґРµР»Рµ РѕРЅ Р·Р°РЅРёРјР°РµС‚ Р»РёС€СЊ РІС‚РѕСЂРѕРµ РјРµСЃС‚Рѕ. Р•РіРѕ РїР»РѕС‰Р°РґСЊ СЃРѕСЃС‚Р°РІР»СЏРµС‚ 261797 РєРІР°РґСЂР°С‚РЅС‹С… РјРёР»СЊ.</stringequalhint>
 
-    <stringequalhint answer="Калифорния">Хотя многие полагают, что Техас - самый большой по размеру штат, на самом деле он занимает лишь второе место. Его площадь составляет 261797 квадратных миль.</stringequalhint>
+    <stringequalhint answer="РљР°Р»РёС„РѕСЂРЅРёСЏ">РҐРѕС‚СЏ РјРЅРѕРіРёРµ РїРѕР»Р°РіР°СЋС‚, С‡С‚Рѕ РўРµС…Р°СЃ - СЃР°РјС‹Р№ Р±РѕР»СЊС€РѕР№ РїРѕ СЂР°Р·РјРµСЂСѓ С€С‚Р°С‚, РЅР° СЃР°РјРѕРј РґРµР»Рµ РѕРЅ Р·Р°РЅРёРјР°РµС‚ Р»РёС€СЊ РІС‚РѕСЂРѕРµ РјРµСЃС‚Рѕ. Р•РіРѕ РїР»РѕС‰Р°РґСЊ СЃРѕСЃС‚Р°РІР»СЏРµС‚ 261797 РєРІР°РґСЂР°С‚РЅС‹С… РјРёР»СЊ.</stringequalhint>
 
-    <textline label="Какой штат США имеет самую большую площадь?" size="20"/>
+    <textline label="РљР°РєРѕР№ С€С‚Р°С‚ РЎРЁРђ РёРјРµРµС‚ СЃР°РјСѓСЋ Р±РѕР»СЊС€СѓСЋ РїР»РѕС‰Р°РґСЊ?" size="20"/>
     </stringresponse>
 
     <demandhint>
-      <hint>Думайте о площади, а не о населении.</hint>
-      <hint>Думайте о всех 50 штатах, а не только о тех, которые расположены на основной континентальной территории США.</hint>
+      <hint>Р”СѓРјР°Р№С‚Рµ Рѕ РїР»РѕС‰Р°РґРё, Р° РЅРµ Рѕ РЅР°СЃРµР»РµРЅРёРё.</hint>
+      <hint>Р”СѓРјР°Р№С‚Рµ Рѕ РІСЃРµС… 50 С€С‚Р°С‚Р°С…, Р° РЅРµ С‚РѕР»СЊРєРѕ Рѕ С‚РµС…, РєРѕС‚РѕСЂС‹Рµ СЂР°СЃРїРѕР»РѕР¶РµРЅС‹ РЅР° РѕСЃРЅРѕРІРЅРѕР№ РєРѕРЅС‚РёРЅРµРЅС‚Р°Р»СЊРЅРѕР№ С‚РµСЂСЂРёС‚РѕСЂРёРё РЎРЁРђ.</hint>
     </demandhint>
 
   </problem>
