--- a/templates/html/anon_user_id.yaml
+++ b/templates/html/anon_user_id.yaml
@@ -7,10 +7,10 @@ data: |
     <!-- Вы можете включить %%USER_ID%% чтобы использовать анонимный идентификатор пользователя на вашем внешнем сервере, чтобы связаться с пользователем позднее.
 
         Вот пример шаблона Qualtrics
-          - Замените "###############"идентификатором вашего опроса
-          - Замените "YOUR_UNIVERSITY" идентификатором вашего университета
-          - Наконец, замените ТЕКСТ_ССЫЛКИ ("YOUR_LINK_TEXT") ссылкой на ваш текст
-          - Если вы хотите, чтобы опрос открывался внутри материалов курса вместо того, чтобы открываться в новой вкладке, замените HTML фрагмент следующим (см. ниже)
+          - Замените "###############"идентификатором вашего опроса.
+          - Замените "YOUR_UNIVERSITY" идентификатором вашего университета.
+          - Наконец, замените ТЕКСТ_ССЫЛКИ ("YOUR_LINK_TEXT") ссылкой на ваш текст.
+          - Если вы хотите, чтобы опрос открывался внутри материалов курса вместо того, чтобы открываться в новой вкладке, замените HTML фрагмент следующим (см. ниже).
 
             <p>Ваши пояснения здесь.</p>
         <iframe src="https://YOUR_UNIVERSITY.qualtrics.com/SE/?SID=SV_###############&a=%%USER_ID%%" height="1000" width="800" />
